src/test/resources/tokens/invalid/integer_out_of_bounds_negative_octal.unpick
unpick v3
group int
    -020000000001